// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Config Object > can get template policy 1`] = `
{
  "section": [
    {
      "blockList": [],
      "id": [
        "type",
      ],
      "label": [
        {
          "keys": [
            "Bug Report",
          ],
          "name": "bug 🐛",
        },
        {
          "keys": [
            "Feature Request",
          ],
          "name": "RFE 🎁",
        },
      ],
    },
  ],
  "template": [],
}
`;

exports[`Config Object > can get template policy 2`] = `
{
  "section": [
    {
      "blockList": [],
      "id": [
        "type",
      ],
      "label": [
        {
          "keys": [
            "Bug Report",
          ],
          "name": "bug 🐛",
        },
        {
          "keys": [
            "Feature Request",
          ],
          "name": "RFE 🎁",
        },
      ],
    },
  ],
  "template": [
    "issue-template.yml",
  ],
}
`;

exports[`Config Object > can get template policy 3`] = `
{
  "section": [
    {
      "blockList": [],
      "id": [
        "type",
      ],
      "label": [
        {
          "keys": [
            "Bug Report",
          ],
          "name": "bug 🐛",
        },
        {
          "keys": [
            "Feature Request",
          ],
          "name": "RFE 🎁",
        },
      ],
    },
  ],
  "template": [
    "issue-template.yml",
  ],
}
`;

exports[`Config Object > can get template policy 4`] = `
{
  "section": [
    {
      "blockList": [],
      "id": [
        "type",
      ],
      "label": [
        {
          "keys": [
            "Bug Report",
          ],
          "name": "bug 🐛",
        },
        {
          "keys": [
            "Feature Request",
          ],
          "name": "RFE 🎁",
        },
      ],
    },
  ],
  "template": [
    "issue-template.yml",
    "template.yml",
  ],
}
`;

exports[`Config Object > get policy() 1`] = `
[
  {
    "section": [
      {
        "blockList": [],
        "id": [
          "type",
        ],
        "label": [
          {
            "keys": [
              "Bug Report",
            ],
            "name": "bug 🐛",
          },
          {
            "keys": [
              "Feature Request",
            ],
            "name": "RFE 🎁",
          },
        ],
      },
    ],
    "template": [],
  },
]
`;

exports[`Config Object > get policy() 2`] = `
[
  {
    "section": [
      {
        "blockList": [],
        "id": [
          "type",
        ],
        "label": [
          {
            "keys": [
              "Bug Report",
            ],
            "name": "bug 🐛",
          },
          {
            "keys": [
              "Feature Request",
            ],
            "name": "RFE 🎁",
          },
        ],
      },
    ],
    "template": [
      "issue-template.yml",
    ],
  },
]
`;

exports[`Config Object > get policy() 3`] = `
[
  {
    "section": [
      {
        "blockList": [],
        "id": [
          "type",
        ],
        "label": [
          {
            "keys": [
              "Bug Report",
            ],
            "name": "bug 🐛",
          },
          {
            "keys": [
              "Feature Request",
            ],
            "name": "RFE 🎁",
          },
        ],
      },
    ],
    "template": [
      "issue-template.yml",
    ],
  },
  {
    "section": [
      {
        "blockList": [],
        "id": [
          "id",
        ],
        "label": [
          {
            "keys": [
              "label",
            ],
            "name": "label",
          },
        ],
      },
    ],
    "template": [
      "template1.yml",
      "template1.yml",
    ],
  },
]
`;

exports[`Config Object > get policy() 4`] = `
[
  {
    "section": [
      {
        "blockList": [],
        "id": [
          "type",
        ],
        "label": [
          {
            "keys": [
              "Bug Report",
            ],
            "name": "bug 🐛",
          },
          {
            "keys": [
              "Feature Request",
            ],
            "name": "RFE 🎁",
          },
        ],
      },
    ],
    "template": [
      "issue-template.yml",
      "template.yml",
    ],
  },
  {
    "section": [
      {
        "blockList": [],
        "id": [
          "id",
        ],
        "label": [
          {
            "keys": [
              "label",
            ],
            "name": "label",
          },
        ],
      },
    ],
    "template": [
      "template1.yml",
      "template1.yml",
    ],
  },
]
`;
